feat: Se desarrolla la logica asociada a generar PDF por parte del Ordenador del Gasto
